refactor: :wrench: Modificar errores.

--- a/train/main.ipynb
+++ b/train/main.ipynb
@@ -229,7 +229,7 @@
    "id": "28e96974",
    "metadata": {},
    "source": [
-    "### **Crear varaibles**\n",
+    "### **Crear variables**\n",
     "- El modelo se va a entrenar utilizando todas las columnas excepto \"Outcome\" (X).\n",
     "- Nos va a devolver una prediccion basandose en la columna \"Outcome\" (Y)."
    ]
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "fac1d0ac",
    "metadata": {},
    "outputs": [],
