--- a/train/main.ipynb
+++ b/train/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "id": "3d732187",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "id": "db4eecf3",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "767                     0.315   23        0  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "id": "ffcccd9c",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 48,
    "id": "f5e79010",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "fac1d0ac",
    "metadata": {},
    "outputs": [],
@@ -277,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 50,
    "id": "7b3ea10b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-8 {\n",
+       "<style>#sk-container-id-5 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: #000;\n",
        "  --sklearn-color-text-muted: #666;\n",
@@ -315,15 +315,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 {\n",
+       "#sk-container-id-5 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 pre {\n",
+       "#sk-container-id-5 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 input.sk-hidden--visually {\n",
+       "#sk-container-id-5 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -335,7 +335,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-5 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -343,7 +343,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-container {\n",
+       "#sk-container-id-5 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -353,7 +353,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-5 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -369,14 +369,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-8 div.sk-parallel-item::after {\n",
+       "#sk-container-id-5 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-parallel {\n",
+       "#sk-container-id-5 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -384,28 +384,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-parallel-item {\n",
+       "#sk-container-id-5 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-5 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-5 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-5 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-8 div.sk-serial {\n",
+       "#sk-container-id-5 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -423,14 +423,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-8 div.sk-toggleable {\n",
+       "#sk-container-id-5 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-8 label.sk-toggleable__label {\n",
+       "#sk-container-id-5 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: flex;\n",
        "  width: 100%;\n",
@@ -443,13 +443,13 @@
        "  gap: 0.5em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 label.sk-toggleable__label .caption {\n",
+       "#sk-container-id-5 label.sk-toggleable__label .caption {\n",
        "  font-size: 0.6rem;\n",
        "  font-weight: lighter;\n",
        "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-5 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -457,25 +457,25 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-8 div.sk-toggleable__content {\n",
+       "#sk-container-id-5 div.sk-toggleable__content {\n",
        "  display: none;\n",
        "  text-align: left;\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-5 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-5 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -483,79 +483,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-5 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  display: block;\n",
        "  width: 100%;\n",
        "  overflow: visible;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-8 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-5 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-8 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-5 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-8 div.sk-label label {\n",
+       "#sk-container-id-5 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-5 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-8 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-8 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-5 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-8 div.sk-label label {\n",
+       "#sk-container-id-5 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-label-container {\n",
+       "#sk-container-id-5 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-8 div.sk-estimator {\n",
+       "#sk-container-id-5 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -565,18 +565,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-estimator.fitted {\n",
+       "#sk-container-id-5 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-8 div.sk-estimator:hover {\n",
+       "#sk-container-id-5 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-5 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -664,7 +664,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-8 a.estimator_doc_link {\n",
+       "#sk-container-id-5 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -679,21 +679,21 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-5 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-8 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-5 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-8 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-5 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
@@ -761,7 +761,7 @@
        "    height: 14px;\n",
        "    cursor: pointer;\n",
        "}\n",
-       "</style><body><div id=\"sk-container-id-8\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-8\" type=\"checkbox\" checked><label for=\"sk-estimator-id-8\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.7/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
+       "</style><body><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.7/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
        "        <div class=\"estimator-table\">\n",
        "            <details>\n",
        "                <summary>Parameters</summary>\n",
@@ -969,7 +969,7 @@
        "LogisticRegression(max_iter=1000)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 51,
    "id": "63a61a0e",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1007,9 @@
    "source": [
     "y_pred = model.predict(X_test)\n",
     "\n",
-    "print(f\"Precisión: {accuracy_score(y_test, y_pred) * 100:.2f}%\")\n",
+    "accuracy = accuracy_score(y_test, y_pred) * 100\n",
+    "\n",
+    "print(f\"Precisión: {accuracy:.2f}%\")\n",
     "print(\"Matriz de confusión:\\n\", confusion_matrix(y_test, y_pred))\n"
    ]
   },
@@ -1021,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 52,
    "id": "a88f7a80",
    "metadata": {},
    "outputs": [
@@ -1071,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 53,
    "id": "3078cfed",
    "metadata": {},
    "outputs": [
@@ -1081,13 +1083,16 @@
        "['modelo_diabetes.pkl']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(model, 'modelo_diabetes.pkl')"
+    "joblib.dump({\n",
+    "    \"model\": model,\n",
+    "    \"accuracy\": accuracy\n",
+    "}, \"modelo_diabetes.pkl\")"
    ]
   },
   {
@@ -1100,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 54,
    "id": "7e6308c1",
    "metadata": {},
    "outputs": [],
@@ -1141,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 55,
    "id": "0b114381",
    "metadata": {},
    "outputs": [
@@ -1156,8 +1161,9 @@
    ],
    "source": [
     "reg = joblib.load('modelo_diabetes.pkl')\n",
+    "model = reg['model']\n",
     "\n",
-    "pred = (reg.predict(df_pacientes) > 0.3).astype(int)\n",
+    "pred = (model.predict(df_pacientes) > 0.3).astype(int)\n",
     "\n",
     "for i in range(len(pred)):\n",
     "    paciente_id = i + 1\n",
